I did a ton of updates to the website. I added a button on the frontpage, fixed the navigation for mobileand then did the same for the footer. Then I also did some spacing on the list items on the application page.

--- a/src/css/applications.css
+++ b/src/css/applications.css
@@ -8,7 +8,9 @@
 .head div {
   padding: 32px;
 }
-
+.head .btn {
+  margin-top: 1.5em;
+}
 .head h1 {
   padding-top: 150px;
   margin: 0;
@@ -34,7 +36,7 @@ section#faq div {
   section#criteria,
   section#process,
   section#why,
-  section#faq  {
+  section#faq {
     flex-direction: column;
   }
 }
@@ -59,4 +61,7 @@ section#criteria {
 #process .flex {
   display: flex;
   justify-content: center;
+}
+.listings li {
+  padding: 0.25em 0;
 }
